Fixed the template to be aligned with the W3C standards

--- a/todoListVisaCal/src/app/todo/todo.component.css
+++ b/todoListVisaCal/src/app/todo/todo.component.css
@@ -33,3 +33,6 @@ div{
 .todo-buttons {
   display: flex;
 }
+p {
+  margin: 0;
+}
